working but not good result 0.6962326294957993

--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -7207,7 +7207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -7286,7 +7286,55 @@
       "computed era: 69\n",
       "computed era: 70\n",
       "computed era: 71\n",
-      "computed era: 72\n"
+      "computed era: 72\n",
+      "computed era: 73\n",
+      "computed era: 74\n",
+      "computed era: 75\n",
+      "computed era: 76\n",
+      "computed era: 77\n",
+      "computed era: 78\n",
+      "computed era: 79\n",
+      "computed era: 80\n",
+      "computed era: 81\n",
+      "computed era: 82\n",
+      "computed era: 83\n",
+      "computed era: 84\n",
+      "computed era: 85\n",
+      "computed era: 86\n",
+      "computed era: 87\n",
+      "computed era: 88\n",
+      "computed era: 89\n",
+      "computed era: 90\n",
+      "computed era: 91\n",
+      "computed era: 92\n",
+      "computed era: 93\n",
+      "computed era: 94\n",
+      "computed era: 95\n",
+      "computed era: 96\n",
+      "computed era: 97\n",
+      "computed era: 98\n",
+      "computed era: 99\n",
+      "computed era: 100\n",
+      "computed era: 101\n",
+      "computed era: 102\n",
+      "computed era: 103\n",
+      "computed era: 104\n",
+      "computed era: 105\n",
+      "computed era: 106\n",
+      "computed era: 107\n",
+      "computed era: 108\n",
+      "computed era: 109\n",
+      "computed era: 110\n",
+      "computed era: 111\n",
+      "computed era: 112\n",
+      "computed era: 113\n",
+      "computed era: 114\n",
+      "computed era: 115\n",
+      "computed era: 116\n",
+      "computed era: 117\n",
+      "computed era: 118\n",
+      "computed era: 119\n",
+      "Wall time: 8min 32s\n"
      ]
     }
    ],
@@ -7335,34 +7383,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6931015361747412"
+       "array([0.47379345, 0.58015406, 0.49622682, ..., 0.46806237, 0.4460991 ,\n",
+       "       0.50340027])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logloss(YV, era_preds[:,0] )"
+    "best_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 13 ms\n"
+      "Wall time: 14 ms\n"
      ]
     }
    ],
@@ -7374,16 +7423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17.270099238457277"
+       "0.6962326294957993"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7391,7 +7440,7 @@
    "source": [
     "losses = log_loss( YV, best_preds )\n",
     "\n",
-    "np.mean(best_preds)"
+    "np.mean(losses)"
    ]
   },
   {
